# masters-thesis

./: .gitignore  .gitmodules  README.md
benchmarks/: Cargo.toml  README.md  create-ramdisk.sh  destroy-ramdisk.sh
benchmarks/comparison/: util.hpp
benchmarks/comparison/OpenMesh/: CMakeLists.txt  algo.hpp  example-build.cpp  example-io.cpp  example-smooth.cpp  example-sqrt3.cpp  main.cpp  read.hpp  read_file.hpp  read_mem.hpp  write.hpp  write_file.hpp  write_mem.hpp
benchmarks/comparison/lox/: algo.rs  example-build.rs  example-io.rs  example-smooth.rs  example-sqrt3.rs  main.rs  read.rs  read_file.rs  read_mem.rs  util.rs  write.rs  write_file.rs  write_mem.rs
benchmarks/comparison/pmp/: CMakeLists.txt  algo.hpp  example-build.cpp  example-io.cpp  example-smooth.cpp  example-sqrt3.cpp  main.cpp  read.hpp  read_file.hpp  write_file.hpp
benchmarks/data/: README.md  cat.ply  cat.stl
benchmarks/memory-layout/: main.rs
benchmarks/raw-results/: AOSvsSOA.xlsx  memory-layout.csv
benchmarks/raw-results/algo/: algorithm.xlsx  data.csv  raw-output.txt
benchmarks/raw-results/io/: file.csv  io-bench.xlsx  mem.csv  raw-output.txt
benchmarks/util/: main.rs
slides/: README.md
text/: .gitignore  README.md  header.sty  notes.txt  outline.txt  sources.bib  thesis.tex
text/chapters/: 1-introduction.tex  2-geometry-processing.tex  3-rust-basics.tex  4-0-implementation-of-lox.tex  4-1-basic-layout-considerations.tex  4-2-mesh-traits.tex  4-3-io.tex  4-4-performance-optimizations.tex  4-5-summary.tex  4-implementation-of-lox.tex  5-evaluation-open-mesh.tex  5-evaluation.tex  6-evaluation-rust.tex  6-rust-limitations.tex  7-conclusion.tex  abstract.tex  acknowledgements.tex  authorship.tex  title.tex
text/img/svg2pdf/: cat-algo.svg.pdf_tex  convert.sh  dem.svg.pdf_tex  hem.svg.pdf_tex  moebius.svg.pdf_tex  non-manifolds.svg.pdf_tex  rust-logo-ferris.svg.pdf_tex  shared-vertex.svg.pdf_tex  tiger.svg.pdf_tex
text/mesh/: README.md
text/mesh/cat-algos/: original.ply  scene.toml  simplified.ply  smoothed-loop-one-iter.ply
text/mesh/intro/: tiger.ply  tiger.toml
text/mesh/möbius/: möbius.ply  scene.toml
text/solarized/: README.md  mysolarized.py
