[package]
name = "lox-benchmarks"
version = "0.0.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.2", features = ["real_blackbox"] }
rand = "0.6"

[[bin]]
name = "util"
path = "util/main.rs"

[[bench]]
name = "memory-layout"
path = "memory-layout/main.rs"
harness = false
