[package]
name = "lox-benchmarks"
version = "0.0.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lox = { path = "../../mesh/lox" } # TODO: git link with commit hash

[dev-dependencies]
criterion = { version = "0.2", features = ["real_blackbox"] }
failure = "0.1"
libtest-mimic = "0.1"
rand = "0.6"

[[bin]]
name = "util"
path = "util/main.rs"

[[bin]]
name = "example-io"
path = "comparison/lox/example-io.rs"

[[bin]]
name = "example-smooth"
path = "comparison/lox/example-smooth.rs"

[[bin]]
name = "example-build"
path = "comparison/lox/example-build.rs"

[[bench]]
name = "memory-layout"
path = "memory-layout/main.rs"
harness = false

[[bench]]
name = "compare-lox"
path = "comparison/lox/main.rs"
harness = false


[replace]
"libtest-mimic:0.1.0" = { path = "../../libtest-mimic" }
