[package]
name = "lox-benchmarks"
version = "0.0.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.lox]
git = "https://github.com/LukasKalbertodt/lox"
rev = "19643376e9eab32e6e748ca0ed51b483127c68f3"

[dev-dependencies]
criterion = { version = "0.2", features = ["real_blackbox"] }
failure = "0.1"
libtest-mimic = "0.1"
rand = "0.6"

[[bin]]
name = "util"
path = "util/main.rs"

[[bin]]
name = "example-io"
path = "comparison/lox/example-io.rs"

[[bin]]
name = "example-smooth"
path = "comparison/lox/example-smooth.rs"

[[bin]]
name = "example-build"
path = "comparison/lox/example-build.rs"

[[bin]]
name = "example-sqrt3"
path = "comparison/lox/example-sqrt3.rs"

[[bench]]
name = "memory-layout"
path = "memory-layout/main.rs"
harness = false

[[bench]]
name = "compare-lox"
path = "comparison/lox/main.rs"
harness = false


[replace]
"libtest-mimic:0.1.0" = { path = "../../libtest-mimic" }
